# asky

./: .envrc  .gitignore  ANALYSIS_HIGH_SEVERITY.md  ANALYSIS_LOW_SEVERITY.md  ANALYSIS_MEDIUM_SEVERITY.md  ARCHITECTURE.md  CLAUDE.md  DEVLOG.md  DEVLOG_ARCHIVE.md  DEVLOG_entry.md  DOCUMENTATION_IMPROVEMENTS.md  README.md  TODO.md  TODO_research_pipeline.md  TODO_scratchpad.md  asearch  asky  pyproject.toml  test_args.py  tests_output.txt
.agents/workflows/: ip.md
.claude/: CLAUDE.md  settings.local.json
.gemini/: settings.json
.github/workflows/: publish-package.yml
assets/: f1-summarizer.bttpreset
assets/shots/: base.tape  boot.tape  daemon-start.tape  document-qa-read.tape  document-qa-sections.tape  elephant-recall.tape  elephant-remember.tape  quickstart-first-query-lean.tape  quickstart-first-query.tape  quickstart-first-run.tape  quickstart-model-add.tape  quickstart-no-model.tape  quickstart-web-search.tape  regen.sh
devlog/: DEVLOG.md  DEVLOG_ARCHIVE.md
devlog/archive/: 2026.03.03-02.md  2026.03.03-03.md  2026.03.03.md
docs/: configuration.md  custom_tools.md  development.md  document_qa.md  elephant_mode.md  library_usage.md  persona_runtime.md  playwright_browser.md  plugins.md  quickstart.md  research_eval.md  research_mode.md  research_testing_strategy.md  testing_recorded_cli.md  troubleshooting.md  web_admin.md  xmpp_daemon.md
evals/research_pipeline/datasets/: rfc_http_nist_v1.yaml
evals/research_pipeline/matrices/: default.toml
plans/: Configurable Local-Ingestion.md  Generic CLI Inline Help Framework.md  Implicit Research Cleanup on Session Deletion.md  Reusable pytest-recording CLI Integration.md  Session-Report-Absorption-and-Full-Snapshot-Cleanup.md  Single-HTML-Report-Per-Session.md  cli-deprecate-direct-flags.md  code-review-phase2-findings.md  code-review-plan.md  extra-integration-tests-review-fixes.md  interface_model_upgrade_v1.md  linux-windows-tray-pystray-ralf-2026-03-15.md  persona-feature-handoff-summary.md  persona-milestone1-authored-book-ingestion-fixups-ralf.md  persona-roadmap.md  plain-query-helper-notice-postanswer-fix.md  plain-query-interface-helper-followup-fixes.md  playwright-browser-plugin.md  plugin-system-api.md  plugin-system-hooks.md  plugin-system-implementation-detailed.md  plugin-system.md  tavily-search-handoff.md  xep-0050-adhoc-commands.md  xep-0363-file-upload.md  xmpp-daemon-as-plugin.md
plans/drafts/: pluginify.md  xmpp-formatting.md
plans/implemented/: Extract Voice and Image Transcribers into Capability Plugins and Extensible Ingestion Hooks.md  Follow-Up Questions Reuse Ingested Corpus Reliably.md  Plain-Query-Interface-Helper.md  align-interface-model-parity.md  cli-copy-final-answer-to-clipboard-ralf-2026-03-14.md  cli-help-discoverability-sync-ralf-v2-2026-03-13.md  code-review-phase1-findings.md  code-review-phase10-findings.md  daemon-backgrounding-and-gui-startup-ralf-2026-03-15.md  docs-improvement-plan.md  enhance-readme-research-mode.md  extra-integration-tests.md  gui-nicegui-agents-guidance-2026-03-16.md  plugin-boundary-enforcement.md  plugin_system_draft.md  research_mode_testing_upgrade.md  summarization_session_lock_fixes.md  xmpp-help-command-regression.md
plans/in-progress/: persona-feature-handoff-summary.md  persona-ui-creation-and-shared-docs-ralf-2026-03-16.md
plans/in-progress/done/: daemon-backgrounding-and-gui-startup-ralf-2026-03-15.md  linux-windows-tray-pystray-ralf-2026-03-15.md  persona-milestone0-baseline-hardening-and-data-foundation-ralf.md  persona-milestone1-authored-book-ingestion-ralf.md  persona-milestone2-runtime-and-evidence-backed-answering-ralf.md  persona-milestone3-source-aware-ingestion-review-ralf.md  persona-milestone4-guided-web-scraping-and-review-ralf-2026-03-14.md  persona-milestone6-review-console-and-web-workflow-ralf-2026-03-15.md  persona-ui-creation-and-shared-docs-ralf-2026-03-16.md
scripts/: devlog_weekly_archiver.py  refresh_cli_cassettes.sh  release_version_info.py  run_research_quality_gate.sh  watch_daemon.sh
skills/: asky-plugin-dev.skill
skills/asky-plugin-dev/: SKILL.md
skills/asky-plugin-dev/references/: external-tools.md  hooks.md  testing.md
src/asearch/: __init__.py  __main__.py  cli.py  config.py  config.toml  html.py  llm.py  storage.py  tools.py
src/asky/: __init__.py  __main__.py  banner.py  cli.py  config.py  config.toml  email_sender.py  html.py  lazy_imports.py  llm.py  logger.py  rendering.py  retrieval.py  summarization.py  template.html  tools.py  url_utils.py
src/asky/api/: AGENTS.md  __init__.py  client.py  context.py  (+6 more)
tasks/: add.md
tests/: AGENTS.md  ARCHITECTURE.md  conftest.py  test_api_client_bugs.py  test_api_client_status.py  test_api_library.py  test_api_model_parameter_override.py  test_api_preload.py  test_api_turn_resolution.py  test_app_bundle_macos.py  test_banner_compact.py  test_banner_embedding.py  test_cli.py  test_config.py  test_corpus_context.py  test_custom_tools.py  test_daemon_config_cli.py  test_daemon_menubar.py  test_devlog_weekly_archiver.py  test_e2e_persona_workflow.py  test_email.py  test_evidence_extraction.py  test_expansion.py  test_feature_reply.py  test_file_prompts.py  test_gui_server_plugin.py  test_high_severity_fixes.py  test_hook_integration.py  test_html.py  test_html_report.py  test_idle_timeout.py  test_image_transcription.py  test_integration.py  test_interface_planner.py  test_lean_mode.py  test_llm.py  test_local_ingestion_flow.py  test_local_source_handler_plugins.py  test_logger.py  test_manual_persona_creator.py  (+56 more)
tests/asky/: test_banner_embedding.py  test_html_report.py  test_llm.py_fragment  test_openrouter.py  test_summarization.py  test_summarization_tracking.py  test_tools.py  test_xml_tool_parsing.py
tests/daemon/: test_xmpp_formatting.py
tests/integration/: test_integration.py
tests/performance/: test_startup_performance.py
tests/scripts/: test_devlog_weekly_archiver.py  test_package_build_contents.py  test_publish_package_workflow.py  test_release_version_info.py  test_run_research_quality_gate.py
website/: index.html  styles.css
(+400 files in other folders)
