[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asky-cli"
version = "0.1.7"
description = "AI-powered web search CLI with LLM tool-calling capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Evren Ozkan" },
]
maintainers = [
    { name = "Evren Ozkan" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["cli", "search", "llm", "ai", "agent", "web-search"]
dependencies = [
    "argcomplete>=3.6.3",
    "chromadb>=1.4.1",
    "markdown>=3.10.1",
    "pyperclip>=1.11.0",
    "requests",
    "rich",
    "sentence-transformers>=3.0.0",
    "trafilatura>=1.12.2",
    "tomlkit>=0.14.0",
    "yake>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/evrenesat/asky"
Repository = "https://github.com/evrenesat/asky"
Issues = "https://github.com/evrenesat/asky/issues"

[project.scripts]
ask = "asky.cli:main"
asky = "asky.cli:main"

[project.optional-dependencies]
iterm = [
    "iterm2>=2.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asky"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
norecursedirs = ["data", "dist"]
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
]
