[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asky-cli"
version = "0.3.0"
description = "AI-powered web search CLI with LLM tool-calling capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Evren Ozkan" },
]
maintainers = [
    { name = "Evren Ozkan" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["cli", "search", "llm", "ai", "agent", "web-search"]
dependencies = [
    "argcomplete>=3.6.3",
    "chromadb>=1.4.1",
    "markdown>=3.10.1",
    "nicegui>=2.0.0",
    "pyperclip>=1.11.0",
    "requests",
    "rich",
    "sentence-transformers>=3.0.0",
    "trafilatura>=1.12.2",
    "tomlkit>=0.14.0",
    "yake>=0.6.0",
    "pymupdf>=1.26.7",
]

[project.urls]
Homepage = "https://github.com/evrenesat/asky"
Repository = "https://github.com/evrenesat/asky"
Issues = "https://github.com/evrenesat/asky/issues"

[project.scripts]
ask = "asky.cli:main"
asky = "asky.cli:main"

[project.optional-dependencies]
tray = ["pystray>=0.19.5"]
test = [

    "iterm2>=2.13",
]
xmpp = [
    "slixmpp>=1.11.0",
]
playwright = [
    "playwright>=1.40.0",
]
mlx-whisper = [
    "mlx-whisper>=0.4.2",
]
mac = [
    "iterm2>=2.13",
    "mlx-whisper>=0.4.2",
    "rumps>=0.4.0",
    "slixmpp>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asky"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.0.0",
    "pytest-recording>=0.13.4",
]

[tool.pytest.ini_options]
addopts = "-n 3 --record-mode=none -m not\\ subprocess_cli\\ and\\ not\\ real_recorded_cli\\ and\\ not\\ live_research"
norecursedirs = [".hypothesis", "data", "dist", "temp", "plan", "evals/research_pipeline/matrices/temp"]
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
markers = [
    "recorded_cli: In-process recorded CLI tests",
    "real_recorded_cli: Real-provider cassette-backed replay tests",
    "subprocess_cli: Subprocess integration tests",
    "live_research: Slow live real-model research capability tests",
    "live_record: Cassette refresh workflows",
    "feature_domain(name): Assign a test module or item to a feature domain",
    "slow: Tests expected to exceed one second",
]

[tool.asky.pytest_feature_domains]
fallback = "run_all"
run_all_env_var = "ASKY_PYTEST_RUN_ALL_DOMAINS"

[tool.asky.pytest_feature_domains.domains.research]
activation_paths = [
    "src/asky/research",
    "src/asky/api/client.py",
    "src/asky/api/preload.py",
    "src/asky/api/session.py",
    "src/asky/api/types.py",
    "src/asky/cli/chat.py",
    "src/asky/cli/main.py",
    "src/asky/cli/section_commands.py",
    "tests/integration/cli_recorded/test_cli_research_local_recorded.py",
    "tests/integration/cli_recorded/test_cli_real_model_recorded.py",
    "tests/integration/cli_live/test_cli_research_live.py",
    "tests/fixtures/research_corpus",
    "scripts/refresh_cli_cassettes.sh",
    "scripts/run_research_quality_gate.sh",
    "docs/research_mode.md",
    "docs/document_qa.md",
    "docs/testing_recorded_cli.md",
    "docs/research_testing_strategy.md",
    "ARCHITECTURE.md",
    "tests/AGENTS.md",
    "tests/ARCHITECTURE.md",
    "pyproject.toml",
]
test_paths = [
    "tests/integration/cli_live/test_cli_research_live.py",
    "tests/integration/cli_recorded/test_cli_real_model_recorded.py",
]
